# web-homeworks

./: .env.example  .gitignore  README.md  conf.py  config.py  main.py  pyproject.toml  seeds.py  test.txt
docs/: index.rst
homework_1/: Dockerfile  diagram.drawio
homework_1,2/: Dockerfile  Pipfile
homework_1/personal_assistant/: main.py
homework_3/: factorize.py
homework_3/sort_files/: constants.py  main.py
homework_4/: Dockerfile  README.md  main.py  message.html
homework_4/starter/: error.html  index.html  message.html
homework_5/: README.md
homework_5/hw_part-1/: constants.py  main.py
homework_5/hw_part-1/src/: __init__.py  exceptions.py  exchange_rates.py  initial_data_from_the_user.py  response_formatter.py
homework_5/hw_part-2/server/: constants.py  server.py
homework_6/: create_db.py  fill_data.py  salary.db  salary.sql
homework_6/query_sql/: query_1.sql  query_10.sql  query_11.sql  query_12.sql  query_2.sql  query_4.sql  query_5.sql  query_6.sql  query_7.sql  query_8.sql  query_9.sql
homework_7/part-1/: config.ini  main.py
homework_7/part-1/alembic/: env.py
homework_7/part-1/database/: __init__.py
homework_7/part-1/seeds/: __init__.py  constants.py  grades.py  groups.py  students.py  subjects.py  teachers.py
homework_7/part-2/: exception.py  main.py
homework_7/part-2/database/: db.py
homework_7/part-2/parse_arguments/: __init__.py  argparse_init.py  check_args.py
homework_7/part-2/querys_to_database/: __init__.py  create_data.py  list_data.py  remove_data.py  update_data.py
homework_8/part-1/: config.ini  connect.py  main.py  seeds.py
homework_8/part-2/: consumer.py  consumer_email.py  consumer_sms.py  contact_model.py  producer.py
homework_9/: authors.json  main.py
homework_9/scrapy_project/: authors.json  main.py
migrate_data_from_mongo_to_postgres/: config.ini.example  main.py
migrations/: env.py
migrations/versions/: 08396d602387_init.py  43643a8c0281_update_model_contact.py  6c55d5f3c7f1_init.py  87ab3c5c9ba8_init.py
quotes/: .env.example  data_migrate.json
quotes/quotes/: environment.py  settings.py  urls.py
quotes/services/: scrape_quotes.py
src/database/: db.py  models.py
src/repository/: contacts.py  users.py
src/routes/: auth.py  contacts.py
src/services/: auth.py  cloudinary.py
src/shemas/: users.py
(+52 files in other folders)
