[tool.poetry]
name = "homework-13-2"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "homework_13_2"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.1.7"
django-environ = "^0.10.0"
psycopg2-binary = "^2.9.5"
django-bootstrap4 = "^22.3"
mongoengine = "^0.27.0"
scrapy = "^2.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
